# job-hunt-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ADR.md  CHANGELOG.md  CODE_GRAPH.md  DEPLOYMENT.md  DESIGN_SPEC.md  Dockerfile  Dockerfile.hf  HF_README.md  ISSUE_REGISTRY.md  Makefile  PRODUCT_BRIEF.md  README.md  agent.py  applier.py  cli.py  config.py  database.py  docker-compose.yml  llm_providers.py  matcher.py  models.py  profile_builder.py  pyproject.toml  requirements.txt  resume_parser.py  scrapers.py  searcher.py
.claude/: settings.json
.github/: ci.yml.template
admin_site/: manage.py  router.py  settings.py  urls.py  wsgi.py
admin_site/app/: admin.py  apps.py  models.py
scripts/: backup.sh  deploy-hf.py  healthcheck.sh  start-admin.sh  start-web.sh  start.sh  stop.sh
tests/: conftest.py
tests/integration/: test_agent_flow.py  test_real_flow.py  test_web.py
tests/unit/: test_agent.py  test_agent_workflow.py  test_cli.py  test_config.py  test_database.py  test_matcher.py  test_matcher_retry.py  test_models.py  test_profile_builder.py  test_resume_parser.py  test_searcher.py  test_searcher_async.py
web/: app.py  auth.py
web/static/: app.js  home.css  liquid.css  styles.css
web/templates/: home.html  index.html  login.html  signup.html
